# MatrixTag-Studio

./: .gitignore  README.md  dmlabeltool.py  pyproject.toml
packaging/: dm_label_tool_gui.spec
src/dm_label_tool/: config.py  gui.py
